deploy/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web
  name: web
  labels:
    id: web
spec:
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: web-image-pull
      containers:
        - name: web
          image: nagge.ru:5050/nagge/web:latest
          imagePullPolicy: Always
          ports:
            - name: web-app
              containerPort: 80
          resources:
            limits:
              memory: 128Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: web-app
      name: web-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web
  name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: "mozy.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  name: web-app
